<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">whatever</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_select_mode">SelectMode</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_love">Love</string>
    <string name="title_activity_instruction">Instruction</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_visited">Visited</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_my_pick">My Pick</string>
    <string name="facebook_app_id">136113573456175</string>
    <string name="feedback">Feedback</string>
    <string name="setting">Setting</string>
    <string name="instruction">Instruction</string>
    <string name="visited">Visited</string>
    <string name="myPick">My Pick</string>
    <string name="pick">Pick</string>
    <string name="title_activity_card_view1">Visited</string>
</resources>